# MetaMorp

./: .gitignore  README.md  bulk_run.sh  function.py  inference.py  pyproject.toml  run.sh  run_black.sh
configs/: base.yaml  base_black.yaml  bulk_base.yaml
