[tool.poetry]
name = "metamorp"
version = "0.1.0"
description = "Inference LLM model easily"
authors = ["hundredeuk2"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
vllm = "^0.6.3.post1"
jupyter = "^1.1.1"
ipykernel = "^6.29.5"
openpyxl = "^3.1.5"
omegaconf = "^2.3.0"
pandas = "2.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
